--- a/src/global.css
+++ b/src/global.css
@@ -55,4 +55,9 @@ body {
         background: linear-gradient(0deg, rgba(220,201,192,1) 0%, rgba(210,169,161,1) 30%, rgba(220,201,192,1) 100%);
         border-radius: 25% 75% 44% 56% / 43% 48% 52% 57% ;
     }
+
+    .shadow-custom {
+        -webkit-text-stroke: 1px #f9e2d8;
+        text-shadow: 4px 4px 4px #f9e2d8;
+    }
 }
