new visual image in the logo

--- a/src/global.css
+++ b/src/global.css
@@ -56,6 +56,12 @@ body {
         background: linear-gradient(0deg, rgba(220,201,192,1) 0%, rgba(210,169,161,1) 30%, rgba(220,201,192,1) 100%);
         border-radius: 25% 75% 44% 56% / 43% 48% 52% 57% ;
     }
+    
+    .rounded-custom-header {
+        background: rgb(220,201,192);
+        background: linear-gradient(0deg, rgba(220,201,192,1) 0%, rgba(210,169,161,1) 30%, rgba(220,201,192,1) 100%);
+        border-radius: 20% 120% 30% 100% / 0% 50% 60% 80%;
+    }
 
     .shadow-custom {
         -webkit-text-stroke: 1px #f9e2d8;
